--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,19 @@ pluginManagement {
         google()
         mavenCentral()
         gradlePluginPortal()
+        maven {
+            url 'https://api.mapbox.com/downloads/v2/releases/maven'
+            authentication {
+                basic(BasicAuthentication)
+            }
+            credentials {
+                // Do not change the username below.
+                // This should always be `mapbox` (not your username).
+                username = "mapbox"
+                // Use the secret token you stored in gradle.properties as the password
+                password = "sk.eyJ1Ijoic2l0b25pbWJ1cyIsImEiOiJjbGU1bXRjMWowYzFpM3FucTRzdjhpaTF3In0.0KjF-nsQSaQjUQ938BNirw"
+            }
+        }
     }
 }
 dependencyResolutionManagement {
@@ -10,6 +23,19 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        maven {
+            url 'https://api.mapbox.com/downloads/v2/releases/maven'
+            authentication {
+                basic(BasicAuthentication)
+            }
+            credentials {
+                // Do not change the username below.
+                // This should always be `mapbox` (not your username).
+                username = "mapbox"
+                // Use the secret token you stored in gradle.properties as the password
+                password = "sk.eyJ1Ijoic2l0b25pbWJ1cyIsImEiOiJjbGU1bXRjMWowYzFpM3FucTRzdjhpaTF3In0.0KjF-nsQSaQjUQ938BNirw"
+            }
+        }
     }
 }
 rootProject.name = "EstoEsUnaPrueba"
