--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,5 +65,5 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
     // mapbox
-    implementation 'com.mapbox.maps:android:10.11.0'
+    // implementation 'com.mapbox.maps:android:10.11.0'
 }
