--- a/settings.gradle
+++ b/settings.gradle
@@ -23,7 +23,7 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
-        maven {
+        /*maven {
             url 'https://api.mapbox.com/downloads/v2/releases/maven'
             authentication {
                 basic(BasicAuthentication)
@@ -35,7 +35,7 @@ dependencyResolutionManagement {
                 // Use the secret token you stored in gradle.properties as the password
                 password = "sk.eyJ1Ijoic2l0b25pbWJ1cyIsImEiOiJjbGU1bXRjMWowYzFpM3FucTRzdjhpaTF3In0.0KjF-nsQSaQjUQ938BNirw"
             }
-        }
+        }*/
     }
 }
 rootProject.name = "EstoEsUnaPrueba"
